# cartridge

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
.github/workflows/: build.yml  release.yml
src/: ABCompare.h  Parameters.cpp  Parameters.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  PresetManager.cpp  PresetManager.h
src/dsp/: Apu.cpp  Apu.h  ApuConstants.h  DpcmSampleManager.cpp  DpcmSampleManager.h  DpcmSamples.cpp  DpcmSamples.h  Lfo.h  Portamento.h  StepSequencer.h  WaveformBuffer.h
src/dsp/channels/: DpcmChannel.cpp  DpcmChannel.h  NoiseChannel.cpp  NoiseChannel.h  PulseChannel.cpp  PulseChannel.h  TriangleChannel.cpp  TriangleChannel.h  Vrc6PulseChannel.cpp  Vrc6PulseChannel.h  Vrc6SawChannel.cpp  Vrc6SawChannel.h
src/dsp/components/: EnvelopeGenerator.cpp  EnvelopeGenerator.h  LengthCounter.cpp  LengthCounter.h  LinearCounter.cpp  LinearCounter.h  SweepUnit.cpp  SweepUnit.h
src/dsp/effects/: BitCrush.cpp  BitCrush.h  Chorus.cpp  Chorus.h  Delay.cpp  Delay.h  EffectsChain.cpp  EffectsChain.h  Filter.cpp  Filter.h  Reverb.cpp  Reverb.h
src/dsp/mixing/: ApuMixer.cpp  ApuMixer.h
src/dsp/modern/: AdsrEnvelope.h  ModernEngine.cpp  ModernEngine.h  ModernVoice.cpp  ModernVoice.h  NesOscillator.h
src/import/: VgmImporter.cpp  VgmImporter.h  VgmInstrumentExtractor.cpp  VgmInstrumentExtractor.h  VgmParser.cpp  VgmParser.h
src/midi/: Arpeggiator.cpp  Arpeggiator.h  MidiVoiceManager.cpp  MidiVoiceManager.h  ModernVoiceManager.cpp  ModernVoiceManager.h  NoteFrequencyTable.h  TuningTable.h
src/ui/: CartridgeLookAndFeel.h  ChannelStripArea.cpp  ChannelStripArea.h  ChannelStripComponent.cpp  ChannelStripComponent.h  Colors.h  EffectsBarComponent.cpp  EffectsBarComponent.h  FullscreenHelper.cpp  FullscreenHelper.h  FullscreenHelper.mm  ModernPanelComponent.cpp  ModernPanelComponent.h  ModulationBarComponent.cpp  ModulationBarComponent.h  PresetComboBox.h  StatusBarComponent.cpp  StatusBarComponent.h  StepSequencerComponent.cpp  StepSequencerComponent.h  Theme.h  TopBarComponent.cpp  TopBarComponent.h  WaveformDisplay.cpp  WaveformDisplay.h
src/ui/components/: ChoiceControl.h  KnobControl.h  ToggleControl.h
tests/: TestABCompare.cpp  TestHelpers.h  TestMain.cpp  TestParameters.cpp  TestPresetManager.cpp
tests/dsp/: TestApu.cpp  TestStepSequencer.cpp
tests/dsp/channels/: TestDpcmChannel.cpp  TestNoiseChannel.cpp  TestPulseChannel.cpp  TestTriangleChannel.cpp  TestVrc6PulseChannel.cpp  TestVrc6SawChannel.cpp
tests/dsp/components/: TestEnvelopeGenerator.cpp  TestLengthCounter.cpp  TestLinearCounter.cpp  TestSweepUnit.cpp
tests/dsp/effects/: TestBitCrush.cpp  TestEffects.cpp  TestFilter.cpp
tests/dsp/mixing/: TestApuMixer.cpp
tests/import/: TestVgmInstrumentExtractor.cpp  TestVgmParser.cpp
tests/midi/: TestArpeggiator.cpp  TestMidiVoiceManager.cpp  TestPortamento.cpp
tests/regression/: TestRegressionBugs.cpp
